--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hi im Sara Clark:)
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>CSCE 190: Sara Clark</title>
+    </head>
+    <body>
+        <h1> Sara Clark's CSCE 190 site</h1>
+    </body>
+</html>
