--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
     </head>
     <body>
         <h1> Sara Clark's CSCE 190 site</h1>
+
+    <section class="assignment">
+        <img src="images/ProblemStatement.png">
+    </section
     </body>
 </html>
