--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
     <body>
         <h1> Sara Clark's CSCE 190 site</h1>
 
-    <section class="assignment">
-        <img src="images/ProblemStatement.png">
-    </section
+        <section class="assignment">
+            <a href="files/CSCE 190 Problem Statement pdf.pdf"><img src="images/problemstatementpic.png"></a>
+             <section class="assigmant details">
+                <a href="files/CSCE 190 Problem Statement pdf.pdf"><h2>Problem Statment: Parking Situation</h2></a>
+                <p>
+                    Parking on campus can seem near impossible at times. The difficulty to find a spot can lead to wasted time, tardiness to class, traffic jams, and unnecessary added stress to college students’ busy days. 
+                </p>
+             </section>
+        </section>
     </body>
+
 </html>
