--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <h1> Sara Clark's CSCE 190 site</h1>
+        <p>
+            I promise this was working a little while ago and when I go to files and open it with chrome it works perfectly but on the off chance its still not working then idk
+        </p>
 
         <section class="assignment">
             <a href="files/CSCE 190 Problem Statement pdf.pdf"><img src="images/problem_statement.png"></a>
