--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <body>
         <h1> Sara Clark's CSCE 190 site</h1>
         <p>
-            I promise this was working a little while ago and when I go to files and open it with chrome it works perfectly but on the off chance its still not working then idk
+            I promise this was working a little while ago and when I go to files and open it with chrome it works perfectly but on the off chance its still not working then idk:)
         </p>
 
         <section class="assignment">
-             <img src="images/Screenshot 2022-09-02 154712.png"></img>
+             <a href="files/CSCE 190 Problem Statement pdf.pdf"><img src="images/Screenshot 2022-09-02 154712.png"></img></a>
              <section class="assigmant details">
                 <a href="files/CSCE 190 Problem Statement pdf.pdf"><h2>Problem Statment: Parking Situation</h2></a>
                 <p>
