--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         </p>
 
         <section class="assignment">
-             <a href="files/CSCE 190 Problem Statement pdf.pdf"><img src="images/Screenshot 2022-09-02 154712.png"></img></a>
+             <a href="files/CSCE 190 Problem Statement pdf.pdf"><img src="images/Screenshot 2022-09-02 154712.png"></a>
+             <img src="images/puppy.png">
              <section class="assigmant details">
                 <a href="files/CSCE 190 Problem Statement pdf.pdf"><h2>Problem Statment: Parking Situation</h2></a>
                 <p>
