--- a/index.html
+++ b/index.html
@@ -1,24 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>CSCE 190: Sara Clark</title>
+        <title>CSCS 190: Sara G Clark</title>
     </head>
     <body>
-        <h1> Sara Clark's CSCE 190 site</h1>
-        <p>
-            I promise this was working a little while ago and when I go to files and open it with chrome it works perfectly but on the off chance its still not working then idk:)
-        </p>
+        <h1>Sara Clark's CECE 190 site:)</h1>
 
-        <section class="assignment">
-             <a href="files/CSCE 190 Problem Statement pdf.pdf"><img src="images/Screenshot 2022-09-02 154712.png"></a>
-             <img src="images/puppy.png">
-             <section class="assigmant details">
-                <a href="files/CSCE 190 Problem Statement pdf.pdf"><h2>Problem Statment: Parking Situation</h2></a>
-                <p>
-                    Parking on campus can seem near impossible at times. The difficulty to find a spot can lead to wasted time, tardiness to class, traffic jams, and unnecessary added stress to college students’ busy days. 
-                </p>
-             </section>
+        <section class="Assignments">
+            <img src="images/ProblemStatement.png">
         </section>
     </body>
-
 </html>
