--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
         <h1>Sara Clark's CECE 190 site:)</h1>
 
         <section class="Assignments">
-            <img src="images/ProblemStatement.png">
+            <a href="files/ProblemStatementpdf.pdf"><img src="images/ProblemStatement.png"></a>
+            <section class="Assignment details">
+                <a href="files/ProblemStatementpdf.pdf"><h2>Problem Statement: Parking Problem</h2></a>
+                <p>
+                    Parking on campus can seem near impossible at times. The difficulty to find a spot can lead to wasted time, tardiness to class, traffic jams, and unnecessary added stress to college students’ busy days.
+                </p>
+            </section>
         </section>
     </body>
 </html>
