--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     </head>
     <body>
         <h1>Sara Clark's CECE 190 site:)</h1>
+        <p>
+            I HAVE NO IDEA WHY THE IMAGE/LINK ISNT WORKING!! WHEN I GO TO FILES AND "OPEN WITH CHROME" EVERYTHING WORKS
+            I DID EMAIL PROF PLANTE BUT IT WAS 4ISH ON FRIDAY DEF MY FAULT BUT IT WAS WORKING WEDNSDAY NIGHT SO IDK WHAT HAPPENED:/
+        </p>
 
         <section class="Assignments">
             <a href="files/ProblemStatementpdf.pdf"><img src="images/ProblemStatement.png"></a>
