--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
         <section class="Assignments">
             <a href="files/ProblemStatementpdf.pdf"><img src="images/ProblemStatement.png"></a>
+            <p>
+                link to teams: https://docs.google.com/spreadsheets/d/1dlmD2AGsU2QKK2Fu9AB7Hv_I6vjcn0D4-PguEnmNmrg/edit#gid=711365325 
+            </p>
             <section class="Assignment details">
                 <a href="files/ProblemStatementpdf.pdf"><h2>Problem Statement: Parking Problem</h2></a>
                 <p>
