--- a/index.html
+++ b/index.html
@@ -18,5 +18,16 @@
                 </p>
             </section>
         </section>
+
+        <section class="Assignments">
+            <a href="files/Group 4 sticky note thing .pdf"><img src="images/Stickynote1.png"></a>
+            <a href="files/Group 4 sticky note thing .pdf"><img src="images/stickynote2.png"></a>
+            <section class="Assignment details">
+                <a href="files/Group 4 sticky note thing .pdf"><h2>Problem Statement: Parking Problem</h2></a>
+                <p>
+                    My group and I worked together to brainstorm at 40 different ideas aboit our app
+                </p>
+            </section>
+        </section>
     </body>
-</html>
+</html
