--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
     <head>
         <title>CSCS 190: Sara G Clark</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Sara Clark's CECE 190 site:)</h1>
 
         <section class="Assignments">
-            <a href="files/ProblemStatementpdf.pdf"><img src="images/ProblemStatement.png"></a>
+            <a href="files/ProblemStatementpdf.pdf"><img src="images/Realproblemstatment.jpg"></a>
             <p>
                 link to teams: https://docs.google.com/spreadsheets/d/1dlmD2AGsU2QKK2Fu9AB7Hv_I6vjcn0D4-PguEnmNmrg/edit#gid=711365325 
             </p>
