--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
     <head>
         <title>CSCS 190: Sara G Clark</title>
         <link rel="stylesheet" href="styles.css">
+        <p>
+            link to teams: https://docs.google.com/spreadsheets/d/1dlmD2AGsU2QKK2Fu9AB7Hv_I6vjcn0D4-PguEnmNmrg/edit#gid=711365325 
+        </p>
     </head>
     <body>
         <h1>Sara Clark's CECE 190 site:)</h1>
 
         <section class="Assignments">
             <a href="files/ProblemStatementpdf.pdf"><img src="images/Realproblemstatment.jpg"></a>
-            <p>
-                link to teams: https://docs.google.com/spreadsheets/d/1dlmD2AGsU2QKK2Fu9AB7Hv_I6vjcn0D4-PguEnmNmrg/edit#gid=711365325 
-            </p>
             <section class="Assignment details">
                 <a href="files/ProblemStatementpdf.pdf"><h2>Problem Statement: Parking Problem</h2></a>
                 <p>
@@ -24,9 +24,19 @@
             <a href="files/Group 4 sticky note thing .pdf"><img src="images/Stickynote1.png"></a>
             <a href="files/Group 4 sticky note thing .pdf"><img src="images/stickynote2.png"></a>
             <section class="Assignment details">
-                <a href="files/Group 4 sticky note thing .pdf"><h2>Problem Statement: Parking Problem</h2></a>
+                <a href="files/Group 4 sticky note thing .pdf"><h2>Affinity Diagram</h2></a>
                 <p>
                     My group and I worked together to brainstorm at 40 different ideas aboit our app
+                </p>
+            </section>
+        </section>
+
+        <section class="Assignments">
+            <a href="files/CSCE 190-Personas.pdf"><img src="images/Screenshot 2022-10-05 135350.png"></a>
+            <section class="Assignment details">
+                <a href="files/CSCE 190-Personas.pdf"><h2>Personas: Jermey Bland</h2></a>
+                <p>
+                    The persona of a typical peron who would benefit from our app
                 </p>
             </section>
         </section>
