--- a/index.html
+++ b/index.html
@@ -22,11 +22,10 @@
 
         <section class="Assignments">
             <a href="files/Group 4 sticky note thing .pdf"><img src="images/Stickynote1.png"></a>
-            <a href="files/Group 4 sticky note thing .pdf"><img src="images/stickynote2.png"></a>
             <section class="Assignment details">
                 <a href="files/Group 4 sticky note thing .pdf"><h2>Affinity Diagram</h2></a>
                 <p>
-                    My group and I worked together to brainstorm at 40 different ideas aboit our app
+                    My group and I worked together to brainstorm at 40 different ideas about our app
                 </p>
             </section>
         </section>
@@ -47,6 +46,16 @@
                 <a href="files/Storyboards (1).pdf"><h2>StoryBoard about Jermey Bland</h2></a>
                 <p>
                     See how our app quickly and effectivly helps Jermey get to his class on time
+                </p>
+            </section>
+        </section>
+
+        <section class="Assignments">
+            <a href="files/Sketch pdf.pdf"><img src="images/sketch1.png"></a>
+            <section class="Assignment details">
+                <a href="files/Sketch pdf.pdf"><h2>Sketch of app</h2></a>
+                <p>
+                    My group and I each created a sketch based on what we think our app should look like
                 </p>
             </section>
         </section>
