--- a/index.html
+++ b/index.html
@@ -3,61 +3,59 @@
     <head>
         <title>CSCS 190: Sara G Clark</title>
         <link rel="stylesheet" href="styles.css">
-        <p>
-            link to teams: https://docs.google.com/spreadsheets/d/1dlmD2AGsU2QKK2Fu9AB7Hv_I6vjcn0D4-PguEnmNmrg/edit#gid=711365325 
-        </p>
     </head>
     <body>
         <h1>Sara Clark's CECE 190 site:)</h1>
 
-        <section class="Assignments">
-            <a href="files/ProblemStatementpdf.pdf"><img src="images/Realproblemstatment.jpg"></a>
-            <section class="Assignment details">
+        <div class="assignment">
+            
+            <section class="Assignments">
                 <a href="files/ProblemStatementpdf.pdf"><h2>Problem Statement: Parking Problem</h2></a>
+                <a href="files/ProblemStatementpdf.pdf"><img src="images/Realproblemstatment.jpg"></a>
                 <p>
                     Parking on campus can seem near impossible at times. The difficulty to find a spot can lead to wasted time, tardiness to class, traffic jams, and unnecessary added stress to college students’ busy days.
                 </p>
             </section>
-        </section>
 
-        <section class="Assignments">
-            <a href="files/Group 4 sticky note thing .pdf"><img src="images/Stickynote1.png"></a>
-            <section class="Assignment details">
+            <section class="Assignments">
                 <a href="files/Group 4 sticky note thing .pdf"><h2>Affinity Diagram</h2></a>
+                <a href="files/Group 4 sticky note thing .pdf"><img src="images/Stickynote1.png"></a>
                 <p>
                     My group and I worked together to brainstorm at 40 different ideas about our app
                 </p>
             </section>
-        </section>
 
-        <section class="Assignments">
-            <a href="files/CSCE 190-Personas.pdf"><img src="images/Screenshot 2022-10-05 135350.png"></a>
-            <section class="Assignment details">
+            <section class="Assignments">
                 <a href="files/CSCE 190-Personas.pdf"><h2>Personas: Jermey Bland</h2></a>
+                <a href="files/CSCE 190-Personas.pdf"><img src="images/Screenshot 2022-10-05 135350.png"></a>
                 <p>
                     The persona of a typical peron who would benefit from our app
                 </p>
             </section>
-        </section>
 
-        <section class="Assignments">
-            <a href="files/Storyboards (1).pdf"><img src="images/Storyboard.png"></a>
-            <section class="Assignment details">
+            <section class="Assignments">
                 <a href="files/Storyboards (1).pdf"><h2>StoryBoard about Jermey Bland</h2></a>
+                <a href="files/Storyboards (1).pdf"><img src="images/Storyboard.png"></a>
                 <p>
                     See how our app quickly and effectivly helps Jermey get to his class on time
-                </p>
+                 </p>
             </section>
-        </section>
 
-        <section class="Assignments">
-            <a href="files/Sketch pdf.pdf"><img src="images/sketch1.png"></a>
-            <section class="Assignment details">
+            <section class="Assignments">
                 <a href="files/Sketch pdf.pdf"><h2>Sketch of app</h2></a>
+                <a href="files/Sketch pdf.pdf"><img src="images/sketch1.png"></a>
                 <p>
                     My group and I each created a sketch based on what we think our app should look like
                 </p>
             </section>
-        </section>
+
+            <section class="Assignments">
+                <a href=https://www.youtube.com/watch?v=8XNFrJ-ET0I><h2>Paper ProtoType</h2></a>
+                <a href=https://www.youtube.com/watch?v=8XNFrJ-ET0I><img src="images/paperproto.png"></a>
+                <p>
+                     My group and I each created a paper ProtoType of what we think our app should look like
+                </p>
+            </section>
+        </div>
     </body>
 </html
