--- a/index.html
+++ b/index.html
@@ -9,52 +9,61 @@
 
         <div class="assignment">
             
-            <section class="Assignments">
+            <section class="assignments">
                 <a href="files/ProblemStatementpdf.pdf"><h2>Problem Statement: Parking Problem</h2></a>
                 <a href="files/ProblemStatementpdf.pdf"><img src="images/Realproblemstatment.jpg"></a>
-                <p>
-                    Parking on campus can seem near impossible at times. The difficulty to find a spot can lead to wasted time, tardiness to class, traffic jams, and unnecessary added stress to college students’ busy days.
-                </p>
+            <p>
+                Parking on campus can seem near impossible at times. The difficulty to find a spot can lead to wasted time, tardiness to class, traffic jams, and unnecessary added stress to college students’ busy days.
+            </p>
             </section>
 
-            <section class="Assignments">
+            <section class="assignments">
                 <a href="files/Group 4 sticky note thing .pdf"><h2>Affinity Diagram</h2></a>
                 <a href="files/Group 4 sticky note thing .pdf"><img src="images/Stickynote1.png"></a>
-                <p>
-                    My group and I worked together to brainstorm at 40 different ideas about our app
-                </p>
+            <p>
+                My group and I worked together to brainstorm at 40 different ideas about our app
+            </p>
             </section>
 
-            <section class="Assignments">
+            <section class="assignments">
                 <a href="files/CSCE 190-Personas.pdf"><h2>Personas: Jermey Bland</h2></a>
                 <a href="files/CSCE 190-Personas.pdf"><img src="images/Screenshot 2022-10-05 135350.png"></a>
-                <p>
-                    The persona of a typical peron who would benefit from our app
-                </p>
+            <p>
+                The persona of a typical peron who would benefit from our app
+            </p>
             </section>
 
-            <section class="Assignments">
+            <section class="assignments">
                 <a href="files/Storyboards (1).pdf"><h2>StoryBoard about Jermey Bland</h2></a>
                 <a href="files/Storyboards (1).pdf"><img src="images/Storyboard.png"></a>
-                <p>
-                    See how our app quickly and effectivly helps Jermey get to his class on time
-                 </p>
+            <p>
+                See how our app quickly and effectivly helps Jermey get to his class on time
+                </p>
             </section>
 
-            <section class="Assignments">
+            <section class="assignments">
                 <a href="files/Sketch pdf.pdf"><h2>Sketch of app</h2></a>
                 <a href="files/Sketch pdf.pdf"><img src="images/sketch1.png"></a>
-                <p>
-                    My group and I each created a sketch based on what we think our app should look like
-                </p>
+             <p>
+                  My group and I each created a sketch based on what we think our app should look like
+            </p>
             </section>
 
-            <section class="Assignments">
+            <section class="assignments">
                 <a href=https://www.youtube.com/watch?v=8XNFrJ-ET0I><h2>Paper ProtoType</h2></a>
                 <a href=https://www.youtube.com/watch?v=8XNFrJ-ET0I><img src="images/paperproto.png"></a>
-                <p>
-                     My group and I each created a paper ProtoType of what we think our app should look like
-                </p>
+             <p>
+                 My group and I each created a paper ProtoType of what we think our app should look like
+            </p>
+            </section>
+
+            <section class="assignments">
+                <a href="files/Proto type - Proto.io.html"><h2>Low-fi Prototype: Find Ur Spot</h2></a>
+                <a href="files/Proto type - Proto.io.html"><img src="images/lowfi.png" width="450" height="400"></a>
+            
+            <p>
+                A low-fi prototype of how the app will look and work.
+            </p>
             </section>
         </div>
     </body>
